--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>CV Maksim Syramalotau </h1>
-    <iframe src="https://github.com/Max-Sir/Max-Sir/blob/main/CV.pdf" width="100%" height="100%">
+    <iframe src="CV.pdf">
     </iframe>
   </body>
 </html>
